Fixed vertical align in profile

--- a/styles/blocks/_profile.scss
+++ b/styles/blocks/_profile.scss
@@ -10,7 +10,7 @@
     }
 
     &-feed {
-        margin: auto;
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
     }
