--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1082,7 +1082,7 @@ h2 {
   justify-content: center;
 }
 .profile-feed {
-  margin: auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
